Mon Feb 13 16:57:36 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING: Devlopers also need makeindex installed for documentation
	  building.  Note that dvips and makeindex are usually packaged with
	  TeX.

Mon Feb 13 15:16:02 GMT 2006  Olly Betts <olly@survex.com>

	* configure.ac,xapian-config.in: Some Linux distros have an
	  unhelpful policy of not packaging .la files, and on Linux
	  link_all_deplibs_CXX=no so we don't actually need to link
	  in the dependency_libs.  So use the value of link_all_deplibs_CXX
	  from configure to control whether we link against dependency_libs.
	* xapian-config.in: Factor out common code into shell functions,
	  and tidy up --help output.
	* xapian-config.in: Re entry "Tue May 11 20:55:56 BST 2004": the (C)
	  dates I mined from CVS included a BrightStation (C), but the few
	  fragments of that version which survive are actually from
	  glib-config (or one of the myriad of *-config scripts which look
	  very like it), and are just standard Bourne shell idioms anyway.

Mon Feb 13 13:59:02 GMT 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: td174 is gone.
	* PLATFORMS: Compaq C++ 7.1 seems to have better template support
	  (but fails to link binaries).

Mon Feb 13 12:22:23 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING,testsuite/testsuite.cc: XAPIAN_TESTSUITE_PLAIN_OUTPUT
	  -> XAPIAN_TESTSUITE_OUTPUT=plain.

Sun Feb 12 18:29:55 GMT 2006  Olly Betts <olly@survex.com>

	* backends/database.cc,tests/api_nodb.cc: Trying to open a database
	  for reading which doesn't exist now fails with DatabaseOpeningError
	  instead of FeatureUnavailableError.  Added regression test
	  nosuchdb1.

Thu Feb 09 10:48:10 GMT 2006  Olly Betts <olly@survex.com>

	* net/socketserver.cc: Add missing '#include <iostream>'
	  when TIMING_PATCH is defined.

Wed Feb 08 08:22:09 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING: Now use libtool 1.5.22 for generating snapshots and
	  releases (includes a number of bug-fixes).